--- a/app/src/main/res/layout/activity_net2.xml
+++ b/app/src/main/res/layout/activity_net2.xml
@@ -46,7 +46,7 @@
                     android:textAlignment="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Transaction Password"
+                    android:text="Profile/Transaction Password"
                     android:textStyle="bold"
                     android:textSize="18sp"
                     android:textColor="@color/black"
@@ -55,7 +55,7 @@
                     android:id="@+id/transpp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:hint="Enter Transaction Password"
+                    android:hint="Enter Profile/Transaction Password"
                     android:background="@drawable/input_border"
                     android:padding="12dp"
                     android:inputType="textPassword"
@@ -64,29 +64,6 @@
                     android:layout_marginBottom="12dp" />
 
 
-                <TextView
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    android:textAlignment="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Profile Password*"
-                    android:textStyle="bold"
-                    android:textSize="18sp"
-                    android:textColor="@color/black"
-                    />
-
-                <EditText
-                    android:id="@+id/pppss"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:hint="Enter Profile Password"
-                    android:inputType="textPassword"
-                    android:background="@drawable/input_border"
-                    android:padding="12dp"
-                    android:textColorHint="#999999"
-                    android:textColor="#000000"
-                    android:layout_marginBottom="12dp" />
 
 
                 <!-- Proceed Button -->
